--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.iunoob.bloodbank">
+    package="com.pilotProject.rampavit.bloodbank">
 
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
@@ -22,20 +22,20 @@
             android:value="@string/google_maps_key" />
         <uses-library android:name="org.apache.http.legacy" android:required="false"/>
         <activity
-            android:name=".activities.LoginActivity"
+            android:name="com.pilotProject.rampavit.bloodbank.activities.LoginActivity"
             android:label="@string/title_activity_login" />
         <activity
-            android:name=".activities.Dashboard"
+            android:name="com.pilotProject.rampavit.bloodbank.activities.Dashboard"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".activities.ProfileActivity"
+            android:name="com.pilotProject.rampavit.bloodbank.activities.ProfileActivity"
             android:label="Registration" />
         <activity
-            android:name=".activities.RestorePassword"
+            android:name="com.pilotProject.rampavit.bloodbank.activities.RestorePassword"
             android:label="Reset Password" />
         <activity
-            android:name=".activities.SplashActivity"
+            android:name="com.pilotProject.rampavit.bloodbank.activities.SplashActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -43,7 +43,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.PostActivity" />
+        <activity android:name="com.pilotProject.rampavit.bloodbank.activities.PostActivity" />
     </application>
 
 </manifest>
